// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Story by rank and without comments correctly 1`] = `
<div>
  <div>
    <div
      className="list-item"
    >
      <div>
        <a
          className="list-item__title"
          href="http://example.com"
        >
          5.testTitle
        </a>
      </div>
      <div
        className="list-item__subtitle"
      >
        123
         points by @
        TestAuthor
         created 
        03:42:01 1970/01/01
         
        <Link
          className="list-item__subtitle list-item__subtitle--link"
          to="story/1"
        >
          top 20 comments
        </Link>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render Story with comments correctly 1`] = `
<div>
  <div>
    <div
      className="list-item"
    >
      <div>
        <a
          className="list-item__title"
          href="http://example.com"
        >
          testTitle
        </a>
      </div>
      <div
        className="list-item__subtitle"
      >
        123
         points by @
        TestAuthor
         created 
        03:42:01 1970/01/01
         
      </div>
    </div>
    <div
      className="list-item list-item--content"
    >
      sometext
    </div>
    <ConnectFunction
      itemId={3}
      key="3"
    />
    <ConnectFunction
      itemId={4}
      key="4"
    />
    <ConnectFunction
      itemId={5}
      key="5"
    />
  </div>
</div>
`;
